# a2a-mlb-agent

./: .env  .env.backup  DEPLOYMENT.md  Pipfile  README.md  __init__.py  agent_executor.py  deploy-to-vercel.sh  memory.py  pyproject.toml  requirements.txt  server.py  simple_test.py  test_client.py  test_mcp_tools.py  test_vercel_api.py  vercel-deployment-guide.md  vercel.json
api/: index.py
mlb-api-mcp/: Dockerfile  LICENSE  README.md  generic_api.py  main.py  pyproject.toml  smithery.yaml
mlb-api-mcp/client/: mcp_client.py
mlb-api-mcp/tests/: run_coverage.py  test_mlb_api.py
prompts/: club_official_prompt.txt  fan_prompt.txt  player_prompt.txt  system_prompt.txt
vercel-a2a-server/: requirements.txt  vercel.json
vercel-a2a-server/api/a2a/: a2a_handler.py  agent_card.py
vercel-mcp-server/: requirements.txt  vercel.json
vercel-mcp-server/api/mcp/: mcp_handler.py
